syntax = "proto3";

package master;
option go_package = "elasticdl/pkg/proto";

enum TensorDtype{
    // Not a legal value for DataType. Used to indicate a DataType field
    // has not been set.
    DT_INVALID = 0; 

    DT_INT8 = 1;
    DT_INT16 = 2;
    DT_INT32 = 3;
    DT_INT64 = 4;
    DT_FLOAT16 = 5;
    DT_FLOAT32 = 6;
    DT_FLOAT64 = 7;
    DT_BOOL = 8;
}
